--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -240,10 +240,10 @@
     <string name="pie_select_title">Selection color</string>
     <string name="pie_outlines_title">Outlines color</string>
     <string name="pie_status_clock_title">Clock color</string>
-    <string name="pie_status_title">Statusbar color</string>
+    <string name="pie_status_title">Status color</string>
     <string name="pie_chevron_left_title">Left chevron color</string>
     <string name="pie_chevron_right_title">Right chevron color</string>
-    <string name="pie_juice_title">Battery icon color</string>
+    <string name="pie_juice_title">Battery juice color</string>
 
     <!-- Battery style -->
     <string name="battery_icon_title">Battery style</string>
