--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -784,9 +784,9 @@
 
     <!-- LED -->
     <string name="led_on">LED On</string>
-    <string name="led_time_on">Time LED Is On</string>
+    <string name="led_time_on">Time Light Is On</string>
     <string name="led_off">LED Off</string>
-    <string name="led_time_off">Time LED Is Off</string>
+    <string name="led_time_off">Time Light Is Off</string>
     <string name="led_time_seconds">" seconds"</string>
     <string name="led_color_click">Click on the LED to change the color</string>
     <string name="title_led_screen_on">LED flash while screen on</string>
