Spelling check (in french)

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -785,7 +785,7 @@
     <!-- Hybrid -->
     <string name="hybrid_settings_title">Paramètres Hybride</string>
     
-    <string name="hybridmode_title">Mode Hyrbide</string>
+    <string name="hybridmode_title">Mode Hybride</string>
     <string name="hybridmode_on">Activé</string>
     <string name="hybridmode_off">Désactivé</string>
 
